# xtux

./: AUTHORS  CHANGELOG  CLAUDE.md  Makefile  README  README.GGZ  README.md
data/: ascii.txt  bios  default.table  desktop.table  entities  generic.table  penguinland.table  sewer.table  slashdot.table  street.table  trashed.table  weapons  wwt.table
data/demos/: bug.xtdem  quigley.xtdem  run.xtdem  slash.xtdem
data/images/: bloodspot.xpm  blueprint.xpm  crosshair.xpm  hand.xpm  healthbar.xpm  icon.xpm  image_not_found.xpm  old-hand.xpm  paper.xpm  title.xpm  tuxbat.xpm
data/images/entities/: borg.xpm  borg_die.xpm  bsd.xpm  bsd_die.xpm  bug.xpm  bunny.xpm  bunny_groom.xpm  cd.xpm  cd_die.xpm  clippy.xpm  clippy_die.xpm  cobol.xpm  cobol_die.xpm  duckboy.xpm  duckboy_die.xpm  duke.xpm  duke_die.xpm  fireball.xpm  fireball_die.xpm  flamer.xpm  flamer_die.xpm  gates.xpm  gates_die.xpm  gnome.xpm  gnome_die.xpm  gnu.xpm  gnu_die.xpm  gown.xpm  kde.xpm  kde_die.xpm  linus.xpm  linus_die.xpm  mscp.xpm  mscp_die.xpm  rms.xpm  rocket_small.xpm  shadowman.xpm  shadowman_die.xpm  suse.xpm  suse_die.xpm  (+11 more)
data/images/events/: dodgy_door.xpm  email.xpm  newspaper.xpm  oldsteam.xpm  scullandcrossbones.xpm  steam.xpm  switch_off.xpm  switch_on.xpm
data/images/items/: badcan.xpm  battery.xpm  bitrot.xpm  blind_glasses.xpm  bullets.xpm  can.xpm  carrot.xpm  dewcan.xpm  disk.xpm  e.xpm  energy.xpm  explosives.xpm  firewall.xpm  natalie_portman.xpm  nodoze.xpm  nuke_crate.xpm  patent.xpm  pizzabox.xpm  random.xpm  rocket.xpm  shells.xpm  slugs.xpm  smp.xpm  spoon.xpm  tightarse.xpm
data/images/items/.xvpics/: carrot.xpm
data/images/tiles/: admission_gate.xpm  aircon.xpm  aircon_h.xpm  aircon_v.xpm  ash.xpm  bad_tile.xpm  bar.xpm  bar_arrow.xpm  bar_choose.xpm  bar_e.xpm  bar_grey_e.xpm  bar_grey_h.xpm  bar_grey_w.xpm  bar_icon_folder.xpm  bar_icon_tools.xpm  bar_icon_windows.xpm  bar_w.xpm  barrier.xpm  basin_e.xpm  basin_e_b.xpm  basin_w.xpm  basin_w_b.xpm  bath.xpm  bath1.xpm  bath1_b.xpm  bath_b.xpm  bath_tile.xpm  bed.xpm  bed1.xpm  bed1_b.xpm  bed_b.xpm  bed_n.xpm  bed_s.xpm  black.xpm  blank.xpm  block_e.xpm  block_m.xpm  block_n.xpm  block_ne.xpm  block_nw.xpm  (+355 more)
data/images/tiles/.xvpics/: slate.xpm  stone.xpm
data/images/weapons/: bazooka.xpm  bazooka_icon.xpm  buckshot_icon.xpm  bullet_icon.xpm  cd_icon.xpm  chaingun.xpm  chainsaw.xpm  chainsaw_icon.xpm  chainsaw_icon2.xpm  crosshair_icon.xpm  egun.xpm  fire_pic.xpm  flames_icon.xpm  lightning_icon.xpm  nuke.xpm  pistol_icon.xpm  radioactive_icon.xpm  railgun.xpm  railslug_icon.xpm  shotgun.xpm  sniper.xpm  soul_suck.xpm  subm.xpm
data/maps/: ai_test.map  arctic.map  bug.map  desktop.map  end.map  geekusa.map  home.map  home2.map  laberinto.map  mapedit.map  my_way_home.map  penguinland.map  sewer.map  skyscraper.map  slashdot.map  street_spirit.map  test.map  unfinished_sympathy.map  watership.map  wwt.map
data/maps/older-maps/: cans.map
doc/: entities  images  mapformat  weapons
scripts/: 2xpm.pl  arm_calc.pl  flipper.pl  mapgen.map  mapgen.pl  merge_images.pl
src/client/: Makefile  cl_net.c  cl_net.h  cl_netmsg_recv.c  cl_netmsg_recv.h  cl_netmsg_send.c  cl_netmsg_send.h  client.h  config.cache  config.status  configure  configure.in  draw.c  draw.h  entity.c  entity.h  image.c  image.h  input.c  input.c~  input.h  input.h~  intro.c  intro.h  main.c  main.c~  menu.c  menu.c~  menu.h  misc.c  misc.c~  misc.h  particle.c  particle.c~  particle.h  text_buffer.c  text_buffer.h  win.c  win.c~  win.h  (+1 more)
src/common/: Makefile  ammo.h  colors.h  common.c  common.c~  common.h  datafile.c  datafile.h  entity_class_names.h  entity_type.c  entity_type.h  map.c  map.h  maths.c  maths.h  net.c  net.h  net_msg.h  timing.c  timing.c~  timing.h  version.h  weapon_type.c  weapon_type.h  xtux.h
src/ggz/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  libtool  ltconfig  xtux.dsc  xtux.room  xtuxclient.dsc
src/ggz/client/: Makefile  Makefile.am  Makefile.in  ggz.c  ggz_client.h
src/ggz/client/.deps/: ggz.P
src/ggz/easysock/: ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  easysock.c  easysock.h  easysock.h.in
src/ggz/easysock/.deps/: easysock.P
src/ggz/server/: Makefile  Makefile.am  Makefile.in  ggz.c  ggz_protocols.h  ggz_server.h
src/ggz/server/.deps/: ggz.P
src/server/: Makefile  ai.c  ai.h  clients.h  entity.c  entity.c~  entity.h  event.c  event.h  game.c  game.h  hitscan.c  hitscan.h  item.c  item.h  main.c  misc.c  misc.h  server.h  sv_map.c  sv_map.h  sv_net.c  sv_net.h  sv_netmsg_recv.c  sv_netmsg_recv.h  sv_netmsg_send.c  sv_netmsg_send.h  weapon.c  weapon.h  world.c  world.h  xtuxggz.c  xtuxggz.h
